syntax = "proto3";
package tm;

option go_package = "github.com/gnolang/gno/pkgs/crypto/ed25519/pb";

// messages
message PubKeyEd25519 {
	bytes Value = 1;
}

message PrivKeyEd25519 {
	bytes Value = 1;
}